Fix for hovers not beeing visible when at the bottom of the page.

--- a/plugins/portlets/sharedcollabfacelets-portlet/docroot/css/simulation/simulation-outputs.css
+++ b/plugins/portlets/sharedcollabfacelets-portlet/docroot/css/simulation/simulation-outputs.css
@@ -1,5 +1,4 @@
 .impactsContent {
-	overflow: hidden;
 	height: 200px;
 }
 
